# ungoogled-chromium-macos

./: .cirrus.yml  .gitignore  .gitmodules  LICENSE  README.md  announcements.md  build.sh  downloads-arm64-rustlib.ini  downloads-arm64.ini  downloads-x86-64-rustlib.ini  downloads-x86-64.ini  downloads.ini  flags.macos.gn  github_get_env.sh  github_prepare_artifacts.sh  ninja.rb  retrieve_and_unpack_resource.sh  sign_and_package_app.sh
.github/scripts/: force_build.txt  github_before_build.sh  github_build.sh  github_disable_spotlight.sh  github_fetch_resources.sh  github_generate_release_note.sh  github_get_env.sh  github_pack_resources.sh  github_prepare_artifacts.sh  github_prepare_release.sh  github_prepare_xcode.sh  github_setup_env_toolchain.sh  github_unpack_archive.sh  github_unpack_resources.sh
.github/workflows/: build.yml  building.yml
devutils/: check_patch_files.sh  print_tag_version.sh  set_quilt_vars.sh  update_patches.sh
patches/: series
patches/debian_buster/disable/: installer.patch  swiftshader.patch
patches/debian_buster/fixes/: as-needed.patch  empty-array.patch  mojo.patch  namespace.patch
patches/debian_buster/warnings/: enum-compare.patch  explicit-constructor.patch  int-in-bool-context.patch  multichar.patch  null-destination.patch  printf.patch
patches/inox-patchset/: chromium-skia-harmony.patch  fix-cfi-failures-with-unbundled-libxml.patch
patches/macos/: fix-dependency
patches/ungoogled-chromium/: fix-llvm-15-build.patch  fix-missing-iterator-subtypes.patch  fix-node-path.patch  fix-python-path.patch
(+39 files in other folders)
